{
  "version": 4,
  "terraform_version": "1.3.5",
  "serial": 52,
  "lineage": "900b6e2f-b5a6-674e-6501-8dd90bcf8e5c",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-068be8174445a3e14",
            "domain": "vpc",
            "id": "eipalloc-068be8174445a3e14",
            "network_border_group": "eu-west-1",
            "public_dns": "ec2-18-202-153-80.eu-west-1.compute.amazonaws.com",
            "public_ip": "18.202.153.80",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07984935f3c74014e",
            "domain": "vpc",
            "id": "eipalloc-07984935f3c74014e",
            "network_border_group": "eu-west-1",
            "public_dns": "ec2-52-210-98-221.eu-west-1.compute.amazonaws.com",
            "public_ip": "52.210.98.221",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:771941357380:internet-gateway/igw-0e20762c60a23614e",
            "id": "igw-0e20762c60a23614e",
            "owner_id": "771941357380",
            "vpc_id": "vpc-0073e6ed3982d9201"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:771941357380:loadbalancer/app/ecsalb/26f558368fbee3fb",
            "arn_suffix": "app/ecsalb/26f558368fbee3fb",
            "desync_mitigation_mode": "defensive",
            "dns_name": "ecsalb-1515779703.eu-west-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-1:771941357380:loadbalancer/app/ecsalb/26f558368fbee3fb",
            "idle_timeout": 30,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "ecsalb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-03bbd5ccc98383ed8"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-08fc67ab4851e08c3"
              },
              {
                "subnet_id": "subnet-0c4648626c473c236"
              }
            ],
            "subnets": [
              "subnet-08fc67ab4851e08c3",
              "subnet-0c4648626c473c236"
            ],
            "vpc_id": "vpc-0073e6ed3982d9201",
            "zone_id": "Z32O12XQLNTSW2"
          },
          "dependencies": [
            "aws_security_group.ecs_sg",
            "aws_subnet.public_1",
            "aws_subnet.public_2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "alb_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:771941357380:listener/app/ecsalb/26f558368fbee3fb/917eea3f85f0151d",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-1:771941357380:targetgroup/ecs-tg/cbcef50496546a0d",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:771941357380:listener/app/ecsalb/26f558368fbee3fb/917eea3f85f0151d",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-1:771941357380:loadbalancer/app/ecsalb/26f558368fbee3fb",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.main",
            "aws_lb_target_group.ecs_rest_api_tg",
            "aws_security_group.ecs_sg",
            "aws_subnet.public_1",
            "aws_subnet.public_2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "ecs_rest_api_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:771941357380:targetgroup/ecs-tg/cbcef50496546a0d",
            "arn_suffix": "targetgroup/ecs-tg/cbcef50496546a0d",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 10,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 2,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:771941357380:targetgroup/ecs-tg/cbcef50496546a0d",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "ecs-tg",
            "port": 5000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0073e6ed3982d9201"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "ngw_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-068be8174445a3e14",
            "connectivity_type": "public",
            "id": "nat-09d08a503b5167f15",
            "network_interface_id": "eni-0ce8b43ab1add717e",
            "private_ip": "10.0.1.137",
            "public_ip": "18.202.153.80",
            "subnet_id": "subnet-0c4648626c473c236"
          },
          "dependencies": [
            "aws_eip.nat_1",
            "aws_internet_gateway.igw",
            "aws_subnet.public_1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "ngw_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07984935f3c74014e",
            "connectivity_type": "public",
            "id": "nat-0145f4afef6a79375",
            "network_interface_id": "eni-0624010d783cd860b",
            "private_ip": "10.0.2.110",
            "public_ip": "52.210.98.221",
            "subnet_id": "subnet-08fc67ab4851e08c3"
          },
          "dependencies": [
            "aws_eip.nat_2",
            "aws_internet_gateway.igw",
            "aws_subnet.public_2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:771941357380:network-acl/acl-0631dad82dfee7c01",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0631dad82dfee7c01",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "771941357380",
            "subnet_ids": [],
            "tags": {},
            "tags_all": {},
            "vpc_id": "vpc-0073e6ed3982d9201"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:771941357380:network-acl/acl-076a6be6c6f4acc08",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-076a6be6c6f4acc08",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "771941357380",
            "subnet_ids": [],
            "tags": {},
            "tags_all": {},
            "vpc_id": "vpc-0073e6ed3982d9201"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "private_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": true,
            "from_port": null,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-3432069286",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0631dad82dfee7c01",
            "protocol": "-1",
            "rule_action": "allow",
            "rule_number": 100,
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_network_acl.private",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "private_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": false,
            "from_port": null,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-1688687736",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0631dad82dfee7c01",
            "protocol": "-1",
            "rule_action": "allow",
            "rule_number": 100,
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_network_acl.private",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "public_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": true,
            "from_port": null,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-1279494891",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-076a6be6c6f4acc08",
            "protocol": "-1",
            "rule_action": "allow",
            "rule_number": 100,
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_network_acl.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "public_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": false,
            "from_port": null,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-1816837095",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-076a6be6c6f4acc08",
            "protocol": "-1",
            "rule_action": "allow",
            "rule_number": 100,
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_network_acl.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-01a99c092e328921c1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-09d08a503b5167f15",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-01a99c092e328921c",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat_1",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.ngw_1",
            "aws_route_table.private_1",
            "aws_subnet.public_1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-06322cf4fd33845ca1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0145f4afef6a79375",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-06322cf4fd33845ca",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat_2",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.ngw_2",
            "aws_route_table.private_2",
            "aws_subnet.public_2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0e20762c60a23614e",
            "id": "r-rtb-090bc674c5fadf32c1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-090bc674c5fadf32c",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:771941357380:route-table/rtb-01a99c092e328921c",
            "id": "rtb-01a99c092e328921c",
            "owner_id": "771941357380",
            "propagating_vgws": [],
            "route": [],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0073e6ed3982d9201"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:771941357380:route-table/rtb-06322cf4fd33845ca",
            "id": "rtb-06322cf4fd33845ca",
            "owner_id": "771941357380",
            "propagating_vgws": [],
            "route": [],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0073e6ed3982d9201"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:771941357380:route-table/rtb-090bc674c5fadf32c",
            "id": "rtb-090bc674c5fadf32c",
            "owner_id": "771941357380",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e20762c60a23614e",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0073e6ed3982d9201"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00a0904aa55816843",
            "route_table_id": "rtb-01a99c092e328921c",
            "subnet_id": "subnet-051af41c3e585f9f1"
          },
          "dependencies": [
            "aws_route_table.private_1",
            "aws_subnet.private_1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09cc8acb7e85dc5ca",
            "route_table_id": "rtb-06322cf4fd33845ca",
            "subnet_id": "subnet-08aa7de574176aefa"
          },
          "dependencies": [
            "aws_route_table.private_2",
            "aws_subnet.private_2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01d8a2c346619b7a0",
            "route_table_id": "rtb-090bc674c5fadf32c",
            "subnet_id": "subnet-0c4648626c473c236"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public_1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d33fd3c8a3bab974",
            "route_table_id": "rtb-090bc674c5fadf32c",
            "subnet_id": "subnet-08fc67ab4851e08c3"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public_2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:771941357380:security-group/sg-03bbd5ccc98383ed8",
            "description": "ECS security group for the ALB.",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03bbd5ccc98383ed8",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 31000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 61000
              }
            ],
            "name": "ecs-sg",
            "name_prefix": "",
            "owner_id": "771941357380",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0073e6ed3982d9201"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:771941357380:subnet/subnet-051af41c3e585f9f1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-051af41c3e585f9f1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "771941357380",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0073e6ed3982d9201"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:771941357380:subnet/subnet-08aa7de574176aefa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08aa7de574176aefa",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "771941357380",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0073e6ed3982d9201"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:771941357380:subnet/subnet-0c4648626c473c236",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c4648626c473c236",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "771941357380",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0073e6ed3982d9201"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:771941357380:subnet/subnet-08fc67ab4851e08c3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08fc67ab4851e08c3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "771941357380",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0073e6ed3982d9201"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:771941357380:vpc/vpc-0073e6ed3982d9201",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-02d784be35c2084c5",
            "default_route_table_id": "rtb-0309331e24881b9ae",
            "default_security_group_id": "sg-094fa680b547c1e81",
            "dhcp_options_id": "dopt-0a81a0ff93f0cda29",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0073e6ed3982d9201",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0309331e24881b9ae",
            "owner_id": "771941357380",
            "tags": {
              "Name": "terraform"
            },
            "tags_all": {
              "Name": "terraform"
            }
          }
        }
      ]
    }
  ]
}